@@ -1,3 +1,10 @@
+drkns 17.06.2016 22:38:32 +0200 - build 4712
+
+1. Частичный откат предыдущих экспериментов с режимами консоли.
+
+2. WindowMode расширен: добавлены два дополнительных параметра StickyX (по умолчанию true) и StickyY (по умолчанию false),
+   определяющие, к каким осям должен подстраиваться размер (и где, соответственно, должны отсутствовать полосы прокрутки).
+
 drkns 17.06.2016 17:44:53 +0200 - build 4711
 
 1. Пара глюков WindowMode.
